Copy all test data to the output folder to prevent messing around with paths. Refactor Examples tests to use a relative path for example files and remove RootDir parameter from run settings

--- a/himl.tests/himl.tests.csproj
+++ b/himl.tests/himl.tests.csproj
@@ -22,4 +22,13 @@
     <ProjectReference Include="..\himl.core\himl.core.csproj" />
   </ItemGroup>
 
+  <!-- Copy the top-level examples directory into the test output so tests can access example files at runtime -->
+  <ItemGroup>
+    <Content Include="..\examples\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <!-- Keep original relative path under an "examples" folder in output -->
+      <Link>examples\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </Content>
+  </ItemGroup>
+
 </Project>
