Enhance CLI functionality and documentation for himl-config-merger mode
- Updated CLI tool to implement upstream `himl-config-merger` behavior, allowing scanning of configuration trees and writing merged files per leaf.
- Added required options for output directory and levels in CLI usage.
- Improved README documentation with usage examples and installation instructions for the CLI.
- Updated project files to include README as package readme.

--- a/himl.cli/himl.cli.csproj
+++ b/himl.cli/himl.cli.csproj
@@ -10,6 +10,7 @@
     <ToolCommandName>himl</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageId>himl.cli</PackageId>
     <PackageVersion>1.0.0</PackageVersion>
     <Authors>Your Name</Authors>
