Include README.md in package output for himl.cli and himl projects

--- a/himl.cli/himl.cli.csproj
+++ b/himl.cli/himl.cli.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\himl.core\himl.core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
+
 </Project>
