Correct hierarchy genration to go DOWN from root path, not up from leaves. Remove extraneous options from the CLI  and rename the tool to himl.cli instead of just himl (for disambiguation)

--- a/himl.cli/himl.cli.csproj
+++ b/himl.cli/himl.cli.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
     <AssemblyName>himl.cli</AssemblyName>
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>himl</ToolCommandName>
+    <ToolCommandName>himl.cli</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
