--- a/himl/himl.csproj
+++ b/himl/himl.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.7.401" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.401" />
+    <PackageReference Include="Google.Cloud.SecretManager.V1" Version="2.6.0" />
   </ItemGroup>
 
   <ItemGroup>
