Implement environment variable defaults in configuration and update examples

--- a/examples/complex/env=dev/env.yaml
+++ b/examples/complex/env=dev/env.yaml
@@ -1,3 +1,3 @@
 env: dev
-foo: "{{env(USER)}}-bar-baz"
-barbar: "{{env(TERM)}}"
+foo: "{{env(USER):TestUser}}-bar-baz"
+barbar: "{{env(TERM):xterm}}"
